Dear ImGui Test Engine
CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2025/08/22:
- TestEngine: added ctx->ScrollToPos(), ScrollToPosX(), ScrollToPosY() helpers.

2025/08/11:
- TestEngine: error when it is detected that main imgui library has not been
  compiled with IMGUI_ENABLE_TEST_ENGINE. (#80)
- TestEngine: detect mismatching build issue when ImGui compiled struct layout does not
  match one seen by test engine.

2025/04/24:
- TestEngine: fixed crash/issue in capture tool.

2025/03/17:
- TestEngine: *BREAKING* reworked ImGuiTestEngine_GetResult() as ImGuiTestEngine_GetResultSummary()
  outputting a structure where we can add more fields.
    Prev:  void ImGuiTestEngine_GetResult(ImGuiTestEngine* engine, int& count_tested, int& count_success);
    Now:   void ImGuiTestEngine_GetResultSummary(ImGuiTestEngine* engine, ImGuiTestEngineResultSummary* out_result);
  New structure include the number of tests remaining in queue (for when aborting or crashing).
- TestEngine: helper crash handler installed by ImGuiTestEngine_InstallDefaultCrashHandler()
  always print a crash string and extra info, even if result export settings are set to None.

2025/03/11:
- TestEngine: fixes various small issues compiling on game consoles.

2025/03/05:
- TestEngine: fixes for internal changes in 1.91.9 related to menu window mangling.

2025/02/07:
- TestEngine: fixes for internal changes in 1.91.9.

2025/01/29:
- TestEngine: fixed issue using MenuXXX() functions with a relative path
  when current SetRef() value is empty.
- TestEngine: fix for menu-bar changes in 1.91.8 wip.

2025/01/20:
- TestEngine: added ItemReadAsString() function helpers to facilitate
  retrieving value from a text editable field. (#26, #66)
- TestEngine: *BREAKING* renamed ItemSelectAndReadValue() functions